--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -89,7 +89,7 @@
     </head>
 
     <body>
-        <h1>All The Best VED</h1>
+        <h1>All The Best Vedansh</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
